fixed logo on smaller screens

--- a/css/layout/_navigation.scss
+++ b/css/layout/_navigation.scss
@@ -4,6 +4,10 @@
   background: rgba(0, 0, 0, 0.6) !important;
 }
 
+.navbarLogo {
+  width: 250px;
+}
+
 .nav-home {
   a {
     font-family: $font;
@@ -82,5 +86,11 @@
     margin: auto;
     text-align: center;
     position: relative !important;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .navbarLogo {
+    width: 200px;
   }
 }
